# Team1_ACM_AI

./: README.md  eda.ipynb  main.py  pyproject.toml
Krishnendu/EDA/: Collab_link.md
Krishnendu/model/: collab_link_model.md
SHRAMAN/EDA/: 1-DataAnalaysis.ipynb  1-TrainData.ipynb  EDAproper.ipynb  FeatureAndModel.ipynb  cleaned_train.csv  enhanced_test_predictions.csv  exact_test_predictions.csv  features_final.csv  gbm_meta_submission.csv  optimized_submission.csv  optimized_test_predictions.csv  replicated_submission.csv  target_final.csv
SHRAMAN/EDA/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
SHRAMAN/EDA/catboost_info/learn/: events.out.tfevents
SHRAMAN/EDA/catboost_info/test/: events.out.tfevents
SHRAMAN/Model/: AmazonDataSet.ipynb  LightModel.ipynb  LittleFasterModel.ipynb  lightning_predictions_fast.csv  optimized_predictions_ensemble.csv  optimized_predictions_optimized.csv
